# mlops-healthcare-platform

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/monitoring/: drift_detection.py
src/registry/: model_registry.py
src/training/: __init__.py  hyperopt.py  trainer.py
src/validation/: __init__.py  iq_validator.py  oq_validator.py  pq_validator.py  report_generator.py  statistical.py
tests/: test_model_registry.py
