[project]
name = "mlops-healthcare-platform"
version = "1.0.0"
description = "Enterprise MLOps platform for healthcare with model registry, drift detection, and governance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher Mangun", email = "cmangun@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["mlops", "healthcare", "model-registry", "drift-detection", "ml-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]
mlflow = [
    "mlflow>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
